# write_file_test

./: Cargo.toml  README.md
test_publisher/: Cargo.toml  package.xml
test_publisher/src/: main.rs
write_file_node/: Cargo.toml  package.xml
write_file_node/src/: main.rs
